# business_faker_provider

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml  linting.yml  tests.yml
business_faker_provider/src/: __init__.py  banking.py  common.py  customer.py
business_faker_provider/tests/: conftest.py
business_faker_provider/tests/unit/: test_bank_account_number.py  test_bank_account_sort_code.py  test_common_date_now_utc.py  test_customer_date_of_birth.py  test_customer_email.py  test_customer_fullname.py  test_customer_phone_number.py  test_customer_street_address.py
